deploy: f034fefad787e3dcc000e48fb69641c4cacb4f4b

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="preconnect" href="https://fonts.bunny.net">
 	<link href="https://fonts.bunny.net/css?family=ibm-plex-mono:400|inter:500" rel="stylesheet" />
-	<link rel="stylesheet" href="/style.css">
+	<link rel="stylesheet" href="/coding-problem-solutions/style.css">
 	<link rel="stylesheet" href="https://cdn.statically.io/gh/PrismJS/prism-themes/447479fc/themes/prism-one-dark.min.css">
 	<title>Coding Problem Solutions</title>
 </head>
@@ -17,17 +17,17 @@
 	<!-- description for main page -->
 <h2>Outline</h2>
 <ul><li>
-		<a href="/3-6-9">3-6-9</a>
+		<a href="3-6-9">3-6-9</a>
 	</li><li>
-		<a href="/longest-common-prefix">Longest Common Prefix</a>
+		<a href="longest-common-prefix">Longest Common Prefix</a>
 	</li><li>
-		<a href="/only-duplicate">Detect the Only Duplicate in a List</a>
+		<a href="only-duplicate">Detect the Only Duplicate in a List</a>
 	</li><li>
-		<a href="/remove-duplicates-sorted-list">Remove Duplicates from Sorted List</a>
+		<a href="remove-duplicates-sorted-list">Remove Duplicates from Sorted List</a>
 	</li><li>
-		<a href="/robinhood">Robinhood</a>
+		<a href="robinhood">Robinhood</a>
 	</li><li>
-		<a href="/roman-to-integer">Roman to Integer</a>
+		<a href="roman-to-integer">Roman to Integer</a>
 	</li></ul>
 
 </div>
