--- a/3-6-9/index.html
+++ b/3-6-9/index.html
@@ -25,8 +25,10 @@
 	<title>3-6-9</title>
 </head>
 <body>
-	<main>
-		
+
+
+<main>
+	
 <div class="solution">
 	
 	<section class="header">
@@ -52,9 +54,7 @@
 	<article>
 		
 		<span class="content">
-			<strong>The Problem</strong>: <a href="https://binarysearch.com/problems/3-6-9" target="_blank" rel="noopener noreferrer">
-			3-6-9
-		</a>
+			<strong>The Problem</strong>: <a href="https://binarysearch.com/problems/3-6-9" target="_blank" rel="noopener noreferrer">3-6-9</a>
 
 			
 			
@@ -84,17 +84,19 @@
     </section>
 </div>
 
-	</main>
-	<footer>
-		
-		<a href="https://github.com/oneminch"  target="_blank" rel="noopener noreferrer">
-			<img src="/coding-problem-solutions/assets/github.svg" alt="Github Icon" />
-			oneminch
-		</a>
-		<a href="https://oneminch.dev"  target="_blank" rel="noopener noreferrer">
-			<img src="/coding-problem-solutions/assets/website.svg" alt="Website Icon" />
-			Portfolio
-		</a>
-	</footer>
+</main>
+	
+<footer>
+	
+	<a href="https://github.com/oneminch"  target="_blank" rel="noopener noreferrer">
+		<img src="/coding-problem-solutions/assets/github.svg" alt="Github Icon" />
+		oneminch
+	</a>
+	<a href="https://oneminch.dev"  target="_blank" rel="noopener noreferrer">
+		<img src="/coding-problem-solutions/assets/website.svg" alt="Website Icon" />
+		Portfolio
+	</a>
+</footer>
 </body>
 </html>
+
