--- a/404.html
+++ b/404.html
@@ -5,12 +5,12 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Primary Meta Tags -->
-	<meta name="title" content="Coding Problem Solutions" />
+	<meta name="title" content="Not Found" />
 	<meta name="description" content="List of my solutions to some coding problems on leetcode.com and binarysearch.com" />
 	<!-- Open Graph / Facebook -->
 	<meta property="og:type" content="website" />
-	<meta property="og:site_name" content="Coding Problem Solutions" />
-	<meta property="og:title" content="Coding Problem Solutions" />
+	<meta property="og:site_name" content="Not Found" />
+	<meta property="og:title" content="Not Found" />
 	<meta property="og:url" content="" />
 	<meta property="og:description" content="List of my solutions to some coding problems on leetcode.com and binarysearch.com" />
 	<meta property="twitter:description" content="List of my solutions to some coding problems on leetcode.com and binarysearch.com" />
@@ -22,43 +22,20 @@
 	<link rel="preconnect" href="https://fonts.bunny.net">
 	<link href="https://fonts.bunny.net/css?family=ibm-plex-mono:400|inter:500&display=swap" rel="stylesheet" />
 	<link rel="stylesheet" href="https://cdn.statically.io/gh/PrismJS/prism-themes/447479fc/themes/prism-one-dark.min.css">
-	<title>Coding Problem Solutions</title>
+	<title>Not Found</title>
 </head>
 <body>
 
 
 <main>
-	<h2>Outline</h2>
-<blockquote>
-<p>List of my solutions to some coding problems on <a href="https://leetcode.com" target="_blank" rel="noopener noreferrer">Leetcode</a> and <a href="https://binarysearch.com" target="_blank" rel="noopener noreferrer">binarysearch</a>.</p>
-</blockquote>
-<ul><li>
-		<a href="3-6-9">3-6-9</a>
-	</li><li>
-		<a href="longest-common-prefix">Longest Common Prefix</a>
-	</li><li>
-		<a href="only-duplicate">Detect the Only Duplicate in a List</a>
-	</li><li>
-		<a href="remove-duplicates-sorted-list">Remove Duplicates from Sorted List</a>
-	</li><li>
-		<a href="robinhood">Robinhood</a>
-	</li><li>
-		<a href="roman-to-integer">Roman to Integer</a>
-	</li></ul>
+	<section class="not-found">
+	<!-- <div> -->
+		<h1>This page doesn't exist.</h1>
+		<a class="home-link" href="/coding-problem-solutions/">Home</a>
+	<!-- </div> -->
+</section>
 
 </main>
-	
-<footer>
-	
-	<a href="https://github.com/oneminch"  target="_blank" rel="noopener noreferrer">
-		<img src="/coding-problem-solutions/assets/github.svg" alt="Github Icon" />
-		oneminch
-	</a>
-	<a href="https://oneminch.dev"  target="_blank" rel="noopener noreferrer">
-		<img src="/coding-problem-solutions/assets/website.svg" alt="Website Icon" />
-		Portfolio
-	</a>
-</footer>
+
 </body>
 </html>
-
