--- a/longest-common-prefix/index.html
+++ b/longest-common-prefix/index.html
@@ -25,8 +25,10 @@
 	<title>Longest Common Prefix</title>
 </head>
 <body>
-	<main>
-		
+
+
+<main>
+	
 <div class="solution">
 	
 	<section class="header">
@@ -54,9 +56,7 @@
 	<article>
 		
 		<span class="content">
-			<strong>The Problem</strong>: <a href="https://leetcode.com/problems/longest-common-prefix/" target="_blank" rel="noopener noreferrer">
-			Longest Common Prefix
-		</a>
+			<strong>The Problem</strong>: <a href="https://leetcode.com/problems/longest-common-prefix/" target="_blank" rel="noopener noreferrer">Longest Common Prefix</a>
 
 			
 			
@@ -91,17 +91,19 @@
     </section>
 </div>
 
-	</main>
-	<footer>
-		
-		<a href="https://github.com/oneminch"  target="_blank" rel="noopener noreferrer">
-			<img src="/coding-problem-solutions/assets/github.svg" alt="Github Icon" />
-			oneminch
-		</a>
-		<a href="https://oneminch.dev"  target="_blank" rel="noopener noreferrer">
-			<img src="/coding-problem-solutions/assets/website.svg" alt="Website Icon" />
-			Portfolio
-		</a>
-	</footer>
+</main>
+	
+<footer>
+	
+	<a href="https://github.com/oneminch"  target="_blank" rel="noopener noreferrer">
+		<img src="/coding-problem-solutions/assets/github.svg" alt="Github Icon" />
+		oneminch
+	</a>
+	<a href="https://oneminch.dev"  target="_blank" rel="noopener noreferrer">
+		<img src="/coding-problem-solutions/assets/website.svg" alt="Website Icon" />
+		Portfolio
+	</a>
+</footer>
 </body>
 </html>
+
