deploy: 8b8d8a5aed26727416db1769c486ac6f8395f20a

--- a/404.html
+++ b/404.html
@@ -1,30 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- Primary Meta Tags -->
-	<meta name="title" content="Not Found" />
-	<meta name="description" content="List of my solutions to some coding problems on leetcode.com and binarysearch.com" />
-	<!-- Open Graph / Facebook -->
-	<meta property="og:type" content="website" />
-	<meta property="og:site_name" content="Not Found" />
-	<meta property="og:title" content="Not Found" />
-	<meta property="og:url" content="" />
-	<meta property="og:description" content="List of my solutions to some coding problems on leetcode.com and binarysearch.com" />
-	<meta property="twitter:description" content="List of my solutions to some coding problems on leetcode.com and binarysearch.com" />
-	<meta property="og:image" content="/coding-problem-solutions/assets/social.png" />
-	<meta property="twitter:image" content="/coding-problem-solutions/assets/social.png" />
-	<!-- Favicon -->
-	<link rel="shortcut icon" href="/coding-problem-solutions/assets/favicon.png" type="image/x-icon" />
-	<link rel="stylesheet" href="/coding-problem-solutions/style.css">
-	<link rel="preconnect" href="https://fonts.bunny.net">
-	<link href="https://fonts.bunny.net/css?family=ibm-plex-mono:400|inter:500&display=swap" rel="stylesheet" />
-	<link rel="stylesheet" href="https://cdn.statically.io/gh/PrismJS/prism-themes/447479fc/themes/prism-one-dark.min.css">
-	<title>Not Found</title>
-</head>
-<body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<!-- http headers -->
+		<meta
+			http-equiv="Content-Security-Policy"
+			content="default-src 'self'; font-src 'self' https://fonts.bunny.net; img-src 'self'; script-src 'self'; style-src 'self' https://fonts.bunny.net https://cdn.statically.io 'unsafe-inline';" />
+		<meta http-equiv="X-XSS-Protection" content="1;mode=block" always />
+		<meta http-equiv="X-Content-Type-Options" content="'nosniff' always" />
+		<meta name="referrer" content="no-referrer" />
+		<meta http-equiv="X-Frame-Options" content="sameorigin" />
+		<!-- Primary Meta Tags -->
+		<meta name="title" content="Not Found" />
+		<meta name="description" content="List of my solutions to some coding problems on leetcode.com and binarysearch.com" />
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta property="og:site_name" content="Not Found" />
+		<meta property="og:title" content="Not Found" />
+		<meta property="og:url" content="" />
+		<meta property="og:description" content="List of my solutions to some coding problems on leetcode.com and binarysearch.com" />
+		<meta property="twitter:description" content="List of my solutions to some coding problems on leetcode.com and binarysearch.com" />
+		<meta property="og:image" content="/coding-problem-solutions/assets/social.png" />
+		<meta property="twitter:image" content="/coding-problem-solutions/assets/social.png" />
+		<!-- Favicon -->
+		<link
+			rel="shortcut icon"
+			href="/coding-problem-solutions/assets/favicon.png"
+			type="image/x-icon" />
+		<link rel="stylesheet" href="/coding-problem-solutions/style.css" />
+		<link rel="preconnect" href="https://fonts.bunny.net" />
+		<link
+			href="https://fonts.bunny.net/css?family=ibm-plex-mono:400|inter:500&display=swap"
+			rel="stylesheet" />
+		<link
+			rel="stylesheet"
+			href="https://cdn.statically.io/gh/PrismJS/prism-themes/447479fc/themes/prism-one-dark.min.css" />
+		<title>Not Found</title>
+	</head>
+	<body></body>
+</html>
 
 
 <main>
