deploy: f892e789d2deec89b552c5982ca084da6d54af3d

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<!-- http headers -->
 		<meta
 			http-equiv="Content-Security-Policy"
-			content="default-src 'self'; font-src 'self' https://fonts.bunny.net; img-src 'self'; script-src 'self'; style-src 'self' https://fonts.bunny.net https://cdn.statically.io 'unsafe-inline';" />
+			content="default-src 'self'; base-uri 'self'; font-src 'self' https://fonts.bunny.net; img-src 'self'; script-src 'self'; style-src 'self' https://fonts.bunny.net https://cdn.statically.io 'unsafe-inline';" />
 		<meta http-equiv="X-XSS-Protection" content="1;mode=block" always />
 		<meta http-equiv="X-Content-Type-Options" content="'nosniff' always" />
 		<meta name="referrer" content="no-referrer" />
@@ -44,7 +44,7 @@
 
 
 <main>
-	<h2>Outline</h2>
+	<h1>Outline</h1>
 <blockquote>
 <p>List of my solutions to some coding problems on <a href="https://leetcode.com" target="_blank" rel="noopener noreferrer">Leetcode</a> and <a href="https://binarysearch.com" target="_blank" rel="noopener noreferrer">binarysearch</a>.</p>
 </blockquote>
@@ -53,13 +53,23 @@
 	</li><li>
 		<a href="longest-common-prefix">Longest Common Prefix</a>
 	</li><li>
+		<a href="merge-sorted-array">Merge Sorted Array</a>
+	</li><li>
 		<a href="only-duplicate">Detect the Only Duplicate in a List</a>
+	</li><li>
+		<a href="palindrome-number">Palindrome Number</a>
+	</li><li>
+		<a href="plus-one">Plus One</a>
 	</li><li>
 		<a href="remove-duplicates-sorted-list">Remove Duplicates from Sorted List</a>
 	</li><li>
 		<a href="robinhood">Robinhood</a>
 	</li><li>
 		<a href="roman-to-integer">Roman to Integer</a>
+	</li><li>
+		<a href="two-sum">Two Sum</a>
+	</li><li>
+		<a href="valid-palindrome">Valid Palindrome</a>
 	</li></ul>
 
 </main>
