deploy: 85aaf29c09ce7ab6aa31341136e0150860dee49c

--- a/3-6-9/index.html
+++ b/3-6-9/index.html
@@ -48,7 +48,7 @@
 <div class="solution">
 	
 	<section class="header">
-		<a href="/coding-problem-solutions/">Outline</a>
+		<h2><a href="/coding-problem-solutions/">Outline</a></h2>
 		<svg
 			xmlns="http://www.w3.org/2000/svg"
 			fill="none"
@@ -76,9 +76,9 @@
 	<article>
 		
 		<span class="content">
-			<strong>The Problem</strong>: <a href="https://binarysearch.com/problems/3-6-9" target="_blank" rel="noopener noreferrer">3-6-9</a>     
-			<img src="/coding-problem-solutions/assets/binarysearch.png" />
-			
+			<strong>The Problem</strong>: <a href="https://binarysearch.com/problems/3-6-9" target="_blank" rel="noopener noreferrer">3-6-9</a>
+      
+      <img src="/coding-problem-solutions/assets/binarysearch.png" alt="Binarysearch" title="Binarysearch" />
 		</span>
 
 		
@@ -91,7 +91,7 @@
 		  
 		<p>
 			<strong>Next Solution</strong>:
-			<a class="next" href="/coding-problem-solutions/longest-common-prefix/">Longest Common Prefix</a>
+			<a class="next" href="/coding-problem-solutions/only-duplicate/">Detect the Only Duplicate in a List</a>
 		</p>
 		
 	</section>
