--- a/404.html
+++ b/404.html
@@ -14,14 +14,14 @@
 		<meta http-equiv="X-Frame-Options" content="sameorigin" />
 		<!-- Primary Meta Tags -->
 		<meta name="title" content="Not Found" />
-		<meta name="description" content="List of my solutions to some coding problems on leetcode.com and binarysearch.com" />
+		<meta name="description" content="List of my solutions to some coding problems on coding platforms like Leetcode" />
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website" />
 		<meta property="og:site_name" content="Not Found" />
 		<meta property="og:title" content="Not Found" />
 		<meta property="og:url" content="" />
-		<meta property="og:description" content="List of my solutions to some coding problems on leetcode.com and binarysearch.com" />
-		<meta property="twitter:description" content="List of my solutions to some coding problems on leetcode.com and binarysearch.com" />
+		<meta property="og:description" content="List of my solutions to some coding problems on coding platforms like Leetcode" />
+		<meta property="twitter:description" content="List of my solutions to some coding problems on coding platforms like Leetcode" />
 		<meta property="og:image" content="/coding-problem-solutions/assets/social.png" />
 		<meta property="twitter:image" content="/coding-problem-solutions/assets/social.png" />
 		<!-- Favicon -->
