--- a/merge-sorted-array/index.html
+++ b/merge-sorted-array/index.html
@@ -48,7 +48,7 @@
 <div class="solution">
 	
 	<section class="header">
-		<a href="/coding-problem-solutions/">Outline</a>
+		<h2><a href="/coding-problem-solutions/">Outline</a></h2>
 		<svg
 			xmlns="http://www.w3.org/2000/svg"
 			fill="none"
@@ -82,9 +82,9 @@
 	<article>
 		
 		<span class="content">
-			<strong>The Problem</strong>: <a href="https://leetcode.com/problems/merge-sorted-array/" target="_blank" rel="noopener noreferrer">Merge Sorted Array</a>   
-			<img src="/coding-problem-solutions/assets/leetcode.png" />
-			  
+			<strong>The Problem</strong>: <a href="https://leetcode.com/problems/merge-sorted-array/" target="_blank" rel="noopener noreferrer">Merge Sorted Array</a>
+      
+      <img src="/coding-problem-solutions/assets/leetcode.png" alt="Leetcode" title="Leetcode" />
 		</span>
 
 		
@@ -103,7 +103,7 @@
 		 
 		<p>
 			<strong>Next Solution</strong>:
-			<a class="next" href="/coding-problem-solutions/only-duplicate/">Detect the Only Duplicate in a List</a>
+			<a class="next" href="/coding-problem-solutions/moving-median/">Moving Median</a>
 		</p>
 		
 	</section>
