--- a/only-duplicate/index.html
+++ b/only-duplicate/index.html
@@ -48,7 +48,7 @@
 <div class="solution">
 	
 	<section class="header">
-		<a href="/coding-problem-solutions/">Outline</a>
+		<h2><a href="/coding-problem-solutions/">Outline</a></h2>
 		<svg
 			xmlns="http://www.w3.org/2000/svg"
 			fill="none"
@@ -80,9 +80,9 @@
 	<article>
 		
 		<span class="content">
-			<strong>The Problem</strong>: <a href="https://binarysearch.com/problems/Detect-the-Only-Duplicate-in-a-List" target="_blank" rel="noopener noreferrer">Detect the Only Duplicate in a List</a>     
-			<img src="/coding-problem-solutions/assets/binarysearch.png" />
-			
+			<strong>The Problem</strong>: <a href="https://binarysearch.com/problems/Detect-the-Only-Duplicate-in-a-List" target="_blank" rel="noopener noreferrer">Detect the Only Duplicate in a List</a>
+      
+      <img src="/coding-problem-solutions/assets/binarysearch.png" alt="Binarysearch" title="Binarysearch" />
 		</span>
 
 		
@@ -95,12 +95,12 @@
 		 
 		<p>
 			<strong>Previous Solution</strong>:
-			<a class="previous" href="/coding-problem-solutions/merge-sorted-array/">Merge Sorted Array</a>
+			<a class="previous" href="/coding-problem-solutions/3-6-9/">3-6-9</a>
 		</p>
 		 
 		<p>
 			<strong>Next Solution</strong>:
-			<a class="next" href="/coding-problem-solutions/palindrome-number/">Palindrome Number</a>
+			<a class="next" href="/coding-problem-solutions/longest-common-prefix/">Longest Common Prefix</a>
 		</p>
 		
 	</section>
