--- a/palindrome-number/index.html
+++ b/palindrome-number/index.html
@@ -48,7 +48,7 @@
 <div class="solution">
 	
 	<section class="header">
-		<a href="/coding-problem-solutions/">Outline</a>
+		<h2><a href="/coding-problem-solutions/">Outline</a></h2>
 		<svg
 			xmlns="http://www.w3.org/2000/svg"
 			fill="none"
@@ -78,9 +78,9 @@
 	<article>
 		
 		<span class="content">
-			<strong>The Problem</strong>: <a href="https://leetcode.com/problems/palindrome-number/" target="_blank" rel="noopener noreferrer">Palindrome Number</a>   
-			<img src="/coding-problem-solutions/assets/leetcode.png" />
-			  
+			<strong>The Problem</strong>: <a href="https://leetcode.com/problems/palindrome-number/" target="_blank" rel="noopener noreferrer">Palindrome Number</a>
+      
+      <img src="/coding-problem-solutions/assets/leetcode.png" alt="Leetcode" title="Leetcode" />
 		</span>
 
 		
@@ -93,7 +93,7 @@
 		 
 		<p>
 			<strong>Previous Solution</strong>:
-			<a class="previous" href="/coding-problem-solutions/only-duplicate/">Detect the Only Duplicate in a List</a>
+			<a class="previous" href="/coding-problem-solutions/moving-median/">Moving Median</a>
 		</p>
 		 
 		<p>
