--- a/robinhood/index.html
+++ b/robinhood/index.html
@@ -48,7 +48,7 @@
 <div class="solution">
 	
 	<section class="header">
-		<a href="/coding-problem-solutions/">Outline</a>
+		<h2><a href="/coding-problem-solutions/">Outline</a></h2>
 		<svg
 			xmlns="http://www.w3.org/2000/svg"
 			fill="none"
@@ -76,9 +76,9 @@
 	<article>
 		
 		<span class="content">
-			<strong>The Problem</strong>: <a href="https://binarysearch.com/problems/Robinhood" target="_blank" rel="noopener noreferrer">Robinhood</a>     
-			<img src="/coding-problem-solutions/assets/binarysearch.png" />
-			
+			<strong>The Problem</strong>: <a href="https://binarysearch.com/problems/Robinhood" target="_blank" rel="noopener noreferrer">Robinhood</a>
+      
+      <img src="/coding-problem-solutions/assets/binarysearch.png" alt="Binarysearch" title="Binarysearch" />
 		</span>
 
 		
