--- a/roman-to-integer/index.html
+++ b/roman-to-integer/index.html
@@ -48,7 +48,7 @@
 <div class="solution">
 	
 	<section class="header">
-		<a href="/coding-problem-solutions/">Outline</a>
+		<h2><a href="/coding-problem-solutions/">Outline</a></h2>
 		<svg
 			xmlns="http://www.w3.org/2000/svg"
 			fill="none"
@@ -80,9 +80,9 @@
 	<article>
 		
 		<span class="content">
-			<strong>The Problem</strong>: <a href="https://leetcode.com/problems/roman-to-integer/" target="_blank" rel="noopener noreferrer">Roman to Integer</a>   
-			<img src="/coding-problem-solutions/assets/leetcode.png" />
-			  
+			<strong>The Problem</strong>: <a href="https://leetcode.com/problems/roman-to-integer/" target="_blank" rel="noopener noreferrer">Roman to Integer</a>
+      
+      <img src="/coding-problem-solutions/assets/leetcode.png" alt="Leetcode" title="Leetcode" />
 		</span>
 
 		
@@ -100,7 +100,7 @@
 		 
 		<p>
 			<strong>Next Solution</strong>:
-			<a class="next" href="/coding-problem-solutions/two-sum/">Two Sum</a>
+			<a class="next" href="/coding-problem-solutions/sliding-window-median/">Sliding Window Median</a>
 		</p>
 		
 	</section>
