--- a/two-sum/index.html
+++ b/two-sum/index.html
@@ -48,7 +48,7 @@
 <div class="solution">
 	
 	<section class="header">
-		<a href="/coding-problem-solutions/">Outline</a>
+		<h2><a href="/coding-problem-solutions/">Outline</a></h2>
 		<svg
 			xmlns="http://www.w3.org/2000/svg"
 			fill="none"
@@ -76,9 +76,9 @@
 	<article>
 		
 		<span class="content">
-			<strong>The Problem</strong>: <a href="https://leetcode.com/problems/two-sum/" target="_blank" rel="noopener noreferrer">Two Sum</a>   
-			<img src="/coding-problem-solutions/assets/leetcode.png" />
-			  
+			<strong>The Problem</strong>: <a href="https://leetcode.com/problems/two-sum/" target="_blank" rel="noopener noreferrer">Two Sum</a>
+      
+      <img src="/coding-problem-solutions/assets/leetcode.png" alt="Leetcode" title="Leetcode" />
 		</span>
 
 		
@@ -91,7 +91,7 @@
 		 
 		<p>
 			<strong>Previous Solution</strong>:
-			<a class="previous" href="/coding-problem-solutions/roman-to-integer/">Roman to Integer</a>
+			<a class="previous" href="/coding-problem-solutions/tree-constructor/">Tree Constructor</a>
 		</p>
 		 
 		<p>
