--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 		<meta http-equiv="X-Frame-Options" content="sameorigin" />
 		<!-- Primary Meta Tags -->
 		<meta name="title" content="Coding Problem Solutions" />
-		<meta name="description" content="List of my solutions to some coding problems on leetcode.com and binarysearch.com" />
+		<meta name="description" content="List of my solutions to some coding problems on coding platforms like Leetcode" />
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website" />
 		<meta property="og:site_name" content="Coding Problem Solutions" />
 		<meta property="og:title" content="Coding Problem Solutions" />
 		<meta property="og:url" content="" />
-		<meta property="og:description" content="List of my solutions to some coding problems on leetcode.com and binarysearch.com" />
-		<meta property="twitter:description" content="List of my solutions to some coding problems on leetcode.com and binarysearch.com" />
+		<meta property="og:description" content="List of my solutions to some coding problems on coding platforms like Leetcode" />
+		<meta property="twitter:description" content="List of my solutions to some coding problems on coding platforms like Leetcode" />
 		<meta property="og:image" content="/coding-problem-solutions/assets/social.png" />
 		<meta property="twitter:image" content="/coding-problem-solutions/assets/social.png" />
 		<!-- Favicon -->
@@ -46,30 +46,64 @@
 <main>
 	<h1>Outline</h1>
 <blockquote>
-<p>List of my solutions to some coding problems on <a href="https://leetcode.com" target="_blank" rel="noopener noreferrer">Leetcode</a> and <a href="https://binarysearch.com" target="_blank" rel="noopener noreferrer">binarysearch</a>.</p>
+<p>List of my solutions to some coding problems on coding platforms like <a href="https://leetcode.com" target="_blank" rel="noopener noreferrer">Leetcode</a>, <a href="https://binarysearch.com" target="_blank" rel="noopener noreferrer">binarysearch</a> and <a href="https://coderbyte.com" target="_blank" rel="noopener noreferrer">Coderbyte</a>.</p>
 </blockquote>
-<ul><li>
+<ul>
+  <li>
 		<a href="3-6-9">3-6-9</a>
-	</li><li>
-		<a href="longest-common-prefix">Longest Common Prefix</a>
-	</li><li>
-		<a href="merge-sorted-array">Merge Sorted Array</a>
-	</li><li>
+    <img src="/coding-problem-solutions/assets/binarysearch.png" alt="Binarysearch" title="Binarysearch" />
+	</li>
+  <li>
 		<a href="only-duplicate">Detect the Only Duplicate in a List</a>
-	</li><li>
+    <img src="/coding-problem-solutions/assets/binarysearch.png" alt="Binarysearch" title="Binarysearch" />
+	</li>
+  <li>
+		<a href="longest-common-prefix">Longest Common Prefix</a>
+    <img src="/coding-problem-solutions/assets/leetcode.png" alt="Leetcode" title="Leetcode" />
+	</li>
+  <li>
+		<a href="merge-sorted-array">Merge Sorted Array</a>
+    <img src="/coding-problem-solutions/assets/leetcode.png" alt="Leetcode" title="Leetcode" />
+	</li>
+  <li>
+		<a href="moving-median">Moving Median</a>
+    <img src="/coding-problem-solutions/assets/coderbyte.png" alt="Coderbyte" title="Coderbyte" />
+	</li>
+  <li>
 		<a href="palindrome-number">Palindrome Number</a>
-	</li><li>
+    <img src="/coding-problem-solutions/assets/leetcode.png" alt="Leetcode" title="Leetcode" />
+	</li>
+  <li>
 		<a href="plus-one">Plus One</a>
-	</li><li>
+    <img src="/coding-problem-solutions/assets/leetcode.png" alt="Leetcode" title="Leetcode" />
+	</li>
+  <li>
 		<a href="remove-duplicates-sorted-list">Remove Duplicates from Sorted List</a>
-	</li><li>
+    <img src="/coding-problem-solutions/assets/leetcode.png" alt="Leetcode" title="Leetcode" />
+	</li>
+  <li>
 		<a href="robinhood">Robinhood</a>
-	</li><li>
+    <img src="/coding-problem-solutions/assets/binarysearch.png" alt="Binarysearch" title="Binarysearch" />
+	</li>
+  <li>
 		<a href="roman-to-integer">Roman to Integer</a>
-	</li><li>
+    <img src="/coding-problem-solutions/assets/leetcode.png" alt="Leetcode" title="Leetcode" />
+	</li>
+  <li>
+		<a href="sliding-window-median">Sliding Window Median</a>
+    <img src="/coding-problem-solutions/assets/leetcode.png" alt="Leetcode" title="Leetcode" />
+	</li>
+  <li>
+		<a href="tree-constructor">Tree Constructor</a>
+    <img src="/coding-problem-solutions/assets/coderbyte.png" alt="Coderbyte" title="Coderbyte" />
+	</li>
+  <li>
 		<a href="two-sum">Two Sum</a>
-	</li><li>
+    <img src="/coding-problem-solutions/assets/leetcode.png" alt="Leetcode" title="Leetcode" />
+	</li>
+  <li>
 		<a href="valid-palindrome">Valid Palindrome</a>
+    <img src="/coding-problem-solutions/assets/leetcode.png" alt="Leetcode" title="Leetcode" />
 	</li></ul>
 
 </main>
