deploy: 725b862d701e9161042f2ea918ba240b093247f5

--- a/3-6-9/index.html
+++ b/3-6-9/index.html
@@ -91,7 +91,7 @@
 		  
 		<p>
 			<strong>Next Solution</strong>:
-			<a class="next" href="/coding-problem-solutions/only-duplicate/">Detect the Only Duplicate in a List</a>
+			<a class="next" href="/coding-problem-solutions/climbing-stairs/">Climbing Stairs</a>
 		</p>
 		
 	</section>
