--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
     <img src="/coding-problem-solutions/assets/binarysearch.png" alt="Binarysearch" title="Binarysearch" />
 	</li>
   <li>
+		<a href="climbing-stairs">Climbing Stairs</a>
+    <img src="/coding-problem-solutions/assets/leetcode.png" alt="Leetcode" title="Leetcode" />
+	</li>
+  <li>
 		<a href="only-duplicate">Detect the Only Duplicate in a List</a>
     <img src="/coding-problem-solutions/assets/binarysearch.png" alt="Binarysearch" title="Binarysearch" />
 	</li>
