deploy: cafb2a0ba084a5f5f2c3013388f916ebaba36b98

--- a/longest-common-prefix/index.html
+++ b/longest-common-prefix/index.html
@@ -7,7 +7,7 @@
 		<!-- http headers -->
 		<meta
 			http-equiv="Content-Security-Policy"
-			content="default-src 'self'; base-uri 'self'; font-src 'self' https://fonts.bunny.net; img-src 'self'; script-src 'self'; style-src 'self' https://fonts.bunny.net https://cdn.statically.io 'unsafe-inline';" />
+			content="default-src 'self'; base-uri 'self'; font-src 'self' https://fonts.bunny.net; img-src 'self'; script-src 'self' https://oneminch-umami.vercel.app; style-src 'self' https://fonts.bunny.net https://cdn.statically.io 'unsafe-inline';" />
 		<meta http-equiv="X-XSS-Protection" content="1;mode=block" always />
 		<meta http-equiv="X-Content-Type-Options" content="'nosniff' always" />
 		<meta name="referrer" content="no-referrer" />
@@ -37,6 +37,8 @@
 		<link
 			rel="stylesheet"
 			href="https://cdn.statically.io/gh/PrismJS/prism-themes/447479fc/themes/prism-one-dark.min.css" />
+		<!-- Privacy friendly analytics -->
+		<script async defer data-website-id="d1c29b81-2b65-4740-89f9-e6bf2967fd19" src="https://oneminch-umami.vercel.app/minch-measure.js"></script>
 		<title>Longest Common Prefix</title>
 	</head>
 	<body></body>
