--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
     <img src="/coding-problem-solutions/assets/leetcode.png" alt="Leetcode" title="Leetcode" />
 	</li>
   <li>
+		<a href="majority-element">Majority Element</a>
+    <img src="/coding-problem-solutions/assets/leetcode.png" alt="Leetcode" title="Leetcode" />
+	</li>
+  <li>
 		<a href="merge-sorted-array">Merge Sorted Array</a>
     <img src="/coding-problem-solutions/assets/leetcode.png" alt="Leetcode" title="Leetcode" />
 	</li>
