--- a/longest-common-prefix/index.html
+++ b/longest-common-prefix/index.html
@@ -100,7 +100,7 @@
 		 
 		<p>
 			<strong>Next Solution</strong>:
-			<a class="next" href="/coding-problem-solutions/merge-sorted-array/">Merge Sorted Array</a>
+			<a class="next" href="/coding-problem-solutions/majority-element/">Majority Element</a>
 		</p>
 		
 	</section>
