--- a/merge-sorted-array/index.html
+++ b/merge-sorted-array/index.html
@@ -100,7 +100,7 @@
 		 
 		<p>
 			<strong>Previous Solution</strong>:
-			<a class="previous" href="/coding-problem-solutions/longest-common-prefix/">Longest Common Prefix</a>
+			<a class="previous" href="/coding-problem-solutions/majority-element/">Majority Element</a>
 		</p>
 		 
 		<p>
