deploy: 5fbcbb66b7fa0910c6d98dcdaa2164971fa541c8

--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
     <img src="/coding-problem-solutions/assets/binarysearch.png" alt="Binarysearch" title="Binarysearch" />
 	</li>
   <li>
+		<a href="flatten">Flatten</a>
+    <img src="/coding-problem-solutions/assets/greatfrontend.png" alt="Greatfrontend" title="Greatfrontend" />
+	</li>
+  <li>
 		<a href="longest-common-prefix">Longest Common Prefix</a>
     <img src="/coding-problem-solutions/assets/leetcode.png" alt="Leetcode" title="Leetcode" />
 	</li>
