--- a/longest-common-prefix/index.html
+++ b/longest-common-prefix/index.html
@@ -95,7 +95,7 @@
 		 
 		<p>
 			<strong>Previous Solution</strong>:
-			<a class="previous" href="/coding-problem-solutions/only-duplicate/">Detect the Only Duplicate in a List</a>
+			<a class="previous" href="/coding-problem-solutions/flatten/">Flatten</a>
 		</p>
 		 
 		<p>
