deploy: b98492179f8abe63f73d12f76ebd3ca8e4fc28cd

--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
     <img src="/coding-problem-solutions/assets/leetcode.png" alt="Leetcode" title="Leetcode" />
 	</li>
   <li>
+		<a href="pascals-triangle-i">Pascal's Triangle I</a>
+    <img src="/coding-problem-solutions/assets/leetcode.png" alt="Leetcode" title="Leetcode" />
+	</li>
+  <li>
 		<a href="plus-one">Plus One</a>
     <img src="/coding-problem-solutions/assets/leetcode.png" alt="Leetcode" title="Leetcode" />
 	</li>
