--- a/palindrome-number/index.html
+++ b/palindrome-number/index.html
@@ -100,7 +100,7 @@
 		 
 		<p>
 			<strong>Next Solution</strong>:
-			<a class="next" href="/coding-problem-solutions/plus-one/">Plus One</a>
+			<a class="next" href="/coding-problem-solutions/pascals-triangle-i/">Pascal&#39;s Triangle I</a>
 		</p>
 		
 	</section>
