--- a/plus-one/index.html
+++ b/plus-one/index.html
@@ -96,7 +96,7 @@
 		 
 		<p>
 			<strong>Previous Solution</strong>:
-			<a class="previous" href="/coding-problem-solutions/palindrome-number/">Palindrome Number</a>
+			<a class="previous" href="/coding-problem-solutions/pascals-triangle-i/">Pascal&#39;s Triangle I</a>
 		</p>
 		 
 		<p>
