deploy: 925edfa9892295bea28b0b4c21e009f0510597e4

--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
     <img src="/coding-problem-solutions/assets/leetcode.png" alt="Leetcode" title="Leetcode" />
 	</li>
   <li>
+		<a href="merge-two-sorted-lists">Merge Two Sorted Lists</a>
+    <img src="/coding-problem-solutions/assets/leetcode.png" alt="Leetcode" title="Leetcode" />
+	</li>
+  <li>
 		<a href="moving-median">Moving Median</a>
     <img src="/coding-problem-solutions/assets/coderbyte.png" alt="Coderbyte" title="Coderbyte" />
 	</li>
