--- a/merge-sorted-array/index.html
+++ b/merge-sorted-array/index.html
@@ -105,7 +105,7 @@
 		 
 		<p>
 			<strong>Next Solution</strong>:
-			<a class="next" href="/coding-problem-solutions/moving-median/">Moving Median</a>
+			<a class="next" href="/coding-problem-solutions/merge-two-sorted-lists/">Merge Two Sorted Lists</a>
 		</p>
 		
 	</section>
