--- a/moving-median/index.html
+++ b/moving-median/index.html
@@ -97,7 +97,7 @@
 		 
 		<p>
 			<strong>Previous Solution</strong>:
-			<a class="previous" href="/coding-problem-solutions/merge-sorted-array/">Merge Sorted Array</a>
+			<a class="previous" href="/coding-problem-solutions/merge-two-sorted-lists/">Merge Two Sorted Lists</a>
 		</p>
 		 
 		<p>
